2004-02-04  Dan Winship  <danw@ximian.com>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): Always
	remove the WWW-Authenticate headers before returning, so the
	session won't fall back to Basic auth. Also, leave the connection
	in the "authenticating" state rather than setting it to
	"authenticated".
	(ntlm_authorize_post): Only requeue the message if it's in the
	"authenticating" state (and set it to "authenticated"). Fixes an
	"unepectedly disconnected" error if authentication fails.

2004-02-03  Dan Winship  <danw@ximian.com>

	* libsoup/soup-message-io.c (io_cleanup): Call
	soup_message_io_stop so we don't get a callback on the io after
	it's been cleaned up.

	* libsoup/soup-session.c (add_auth): Only remove the Authorization
	header if we have another one to add. (Otherwise it messes up
	SoupConnectionNTLM.)

	* libsoup/soup-socket.c (read_from_buf): Use memmove rather than
	memcpy here, since the source and destination will overlap if
	*nread is small and read_buf->len is large. (Noticed by valgrind,
	#53625.)

2004-02-02  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (soup_gnutls_close): Call gnutls_bye()
	with the GNUTLS_SHUT_WR flag (instead of RDWR) and check only for
	GNUTLS_E_INTERRUPTED.  GNUTLS_E_AGAIN will be returned by recv()
	when there are no messages on the wire on a non-blocking socket.
	This sends a SSL hangup message and then allows us to immediately
	close the socket.

2004-01-30  Rodrigo Moya <rodrigo@ximian.com>

	* configure.in: bumped version number to 2.1.6.

2004-01-29  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch] (soup_soap_parameter_get_property):
	new function.

2004-01-29  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]
	(soup_soap_parameter_get_string_value): removed 'const' from return
	type.

2004-01-29  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-gnutls.c (verify_certificate): Initialize the
	certificate before we try to use it.  Ahem.
